Changes towards version 0.7:
- Change hardcoded Starbase and Sa-Matra values to pretty enum values
  (bug #1047), from Nic
- Load override.cfg from user's dir to add or override menu controls - Alex
- Allow addons to override any content by placing zips into their
  'shadow-content' dir - Alex
- Content reorg: font chars now use hexadecimal numbering - Alex
- Content reorg: some race comm and ships renamed, ship files renamed,
  many ani files renamed, new naming scheme for ani frames and voice - Alex
- .cfg files are now kept as subtrees of the resource map - Michael
- Flight control data no longer unnecessarily copied to config directory - Michael
- Index loading/saving now can operate on subtrees - Michael
- Videos vs. slide now controlled by a '3dovideo' addon - Michael
- New video resource type for 3DO videos - Michael
- Allow reaching 999.9:999.9 in HyperSpace (bug #628), from Nic
- Use system getopt_long() when available - SvdB
- Added --addondir commandline option - Mika
- Case insensitive matching when looking for .zip/.uqm/.rmp files - SvdB
- Added read-ahead buffering when reading zip index files. - SvdB
- Added support for packed ani and font files - Mika
- DrawTracedText abstraction (bug #1029), from Nic
- Experimental support for Symbian S60 3rd edition - Mika & SvdB
- Pthread support - Mika
- Content Dirs completely reorganized; 3DO and PC segregation - Coredev
- Voiceovers controlled by a synthetic '3dovoice' addon - Michael
- CONVERSATION explicitly names text/voice/timestamps - Michael
- Replaced stricmp() by the POSIX compatible strcasecmp() - SvdB
- Split STRTAB further into STRTAB and CONVERSATION - Michael
- INT32, BOOLEAN, and STRING resource types - Michael
- UNKNOWNRES is now safe to load, and "loads" as its resvalue - Michael
- CODE is now SHIP, and uses an integer descriptor instead of a one-byte
  .cod file - Michael
- ResourceLoadFun is now descriptor-based, not stream-based - Michael